# legacy

./: .clojure  .env  .gitignore  .gitmodules  .gn  .hgignore  .npmignore  .rubocop.yaml  .travis.yml  AndroidManifest.xml  Appfile  Dockerfile  Gemfile  Info.plist  LICENSE  Makefile  Makefile.am  Makefile.in  OWNERS  README.markdown  README.rdoc  READMEREAL.txt  Rakefile  TODO  Vagrantfile  WORKSPACE  aclocal.m4  api.raml_tmpl  app.json  autogen.sh  bower.BUILD  bower.json  builder  command.bat  config.js  configure  configure.status  execute  gilliam.yml  ios.gyp  (+9 more)
English.lproj/: InfoPlist.strings
app/assets/javascripts/: application.js
app/assets/stylesheets/: helpers.stylus  scaffolds.css.scss
app/controllers/: homes_controller.rb
app/helpers/: homes_helper.rb
app/models/: agent.rb  home.rb  lgc.rb
app/models/concerns/: all.rb
app/views/homes/: _form.html.erb  arcade.html.erb  index.html.erb  (+3 more)
config/: application.rb  database.yml  environment.rb  routes.rb
config/environments/: development.rb  production.rb  test.rb
config/initializers/: secret_token.rb  session_store.rb
db/: schema.rb
db/migrate/: 20140404115715_create_homes.rb  20140404232544_add_lgc.rb
doc/: passwords.txt
features/: authentication.feature
features/step_definitions/: devise_steps.rb  post_steps.rb
features/support/: env.rb  paths.rb
legacy.xcodeproj/: project.pbxproj
legacy.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
public/: index.php
spec/: spec_helper.rb
test/: requirements.txt  test_google.py
test/controllers/: homes_controller_test.rb
(+4 files in other folders)
